fixed search bar z-index

--- a/app/assets/stylesheets/brewery-tile.scss
+++ b/app/assets/stylesheets/brewery-tile.scss
@@ -2,6 +2,7 @@
 @use "neat";
 
 .brewery-tile-container {
+  position: relative;
   margin: 1.5em;
   margin-left: auto;
   margin-right: auto;
